# DataconFF

./: .env.example  .gitattributes  .gitignore  AGENTS.MD  ARCHITECTURE.md  README.md  RESULTS.md  app.py  parse_pdf.cmd  parse_pdf_auto.cmd  parse_pdf_auto_all.cmd  pyproject.toml  requirements.txt  setup_decimer_env.cmd  setup_external_envs.cmd  setup_molscribe_env.cmd  setup_project_env.cmd  tatus
code_examples/: extraction_prompt_examples.md
config/: pdf_tools.example.json  rag_models.json
methodology_notes/: chemx_paper_summary.md  datacon_2.md  datacon_3.md  datacon_4.md  datacon_5.md
molecule_facts/: optional_pubchem_notes.md  readme.md
project_docs/: CHEMX_EVALUATION_NOTES.md  DATACON_ARCHITECTURE_DECISION.md  DATACON_EXECUTION_CHECKLIST.md  DATACON_FINAL_TASK_BRIEF.md  DATACON_PREPARATION.md  DECISIONS.md  PDF_EXTRACTION_PLAN.md  RAG_DESIGN.md  ROADMAP.md
scripts/: audit_validation_rejects.py  audit_zero_pdfs.py  check_missing_pdfs.py  crop_pdf_region.py  download_benzimidazoles_pdfs.py  evaluate_domain.py  import_molscribe_crop.py  install_vector_deps.ps1  rag.ps1  render_pdf_pages.py  run_auto_structure_workflow.py  run_benzimidazoles_full.py  run_benzimidazoles_harness.py  run_benzimidazoles_llm.py  run_decimer_to_manifest.py  run_domain.py  run_hybrid_benzimidazoles.py  run_molscribe_one.py  run_rxnscribe_one.py  run_synergy_experimental.py  run_yolo_to_manifest.py  vector.ps1
tests/: test_agentic_orchestration.py  test_benzimidazole_workflow.py  test_benzimidazoles_full_runner.py  test_benzimidazoles_llm_pipeline.py  test_chemx_eval.py  (+19 more)
(+962 files in other folders)
