[project]
name = "datacon-extraction"
version = "0.1.0"
description = "RAG-assisted chemical data extraction workspace"
requires-python = ">=3.11"
dependencies = [
  "openai>=2.44.0",
  "pdfplumber>=0.11.0",
  "pydantic>=2.0",
  "pytest>=9.1.1",
]

[project.optional-dependencies]
vector = [
  "chromadb>=0.5.0",
  "openai>=1.0.0",
]
pdf-images = [
  "pymupdf>=1.24.0",
]
yolo = [
  "pillow>=10.0",
  "ultralytics>=8.0.0",
]

[project.scripts]
datacon-rag = "rag_core.cli:main"
datacon-pdf = "pdf_extraction.pipeline:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
