[project]
name = "datacon-extraction"
version = "0.1.0"
description = "ChemX Benzimidazoles PDF information extraction workflow"
requires-python = ">=3.11"
dependencies = [
  "openai>=2.44.0",
  "pdfplumber>=0.11.0",
  "pydantic>=2.0",
  "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
